evidence_library/EC2/regions/eu-west-2/allSecurityGroups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0b40b6c572d76c5d7",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-02a8ecbedb4728952",
            "SecurityGroupArn": "arn:aws:ec2:eu-west-2:111111111111:security-group/sg-0b40b6c572d76c5d7",
            "OwnerId": "111111111111",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "111111111111",
                            "GroupId": "sg-0b40b6c572d76c5d7"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ],
    "ResponseMetadata": {
        "RequestId": "a7d25bb2-8faf-438d-8cfb-1538ed28a931",
        "HTTPStatusCode": 200,
        "HTTPHeaders": {
            "x-amzn-requestid": "a7d25bb2-8faf-438d-8cfb-1538ed28a931",
            "cache-control": "no-cache, no-store",
            "strict-transport-security": "max-age=31536000; includeSubDomains",
            "content-type": "text/xml;charset=UTF-8",
            "content-length": "960",
            "date": "Fri, 06 Feb 2026 16:25:27 GMT",
            "server": "AmazonEC2"
        },
        "RetryAttempts": 0
    }
}
